logs/validate.20260408-061623.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: expected delimiter
   --> src/Chap47/QuadProbFlatHashTableStEph.rs:619:46
    |
619 | ...                   implies !#[trigger] old_table_seq[j].spec_entry_to_map().dom().contains(key) by {
    |                                ^

error[E0425]: cannot find type `QuadProbFlatHashTableStEph` in this scope
    --> src/Chap47/QuadProbFlatHashTableStEph.rs:1288:30
     |
1288 |     impl std::fmt::Debug for QuadProbFlatHashTableStEph {
     |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `QuadProbFlatHashTableStEph` in this scope
    --> src/Chap47/QuadProbFlatHashTableStEph.rs:1294:32
     |
1294 |     impl std::fmt::Display for QuadProbFlatHashTableStEph {
     |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 2952MB, peak z3 RSS: 340MB, min free: 23399MB
Sampled CPU Usage: rust_verify: 45s, z3 children: 32s
